Changes to config

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,8 +2,8 @@
 ---
 
 // Colors
-$primary: #e5261f;
-$primary-dark: #a01b16;
+$primary: #0B5394;
+$primary-dark: #073763;
 $secondary: #f88379;
 $black: #2f2f41;
 $white: #ffffff;
