Changing Secondary color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 // Colors
 $primary: #0B5394;
 $primary-dark: #073763;
-$secondary: #f88379;
+$secondary: #9ac6ed;
 $black: #2f2f41;
 $white: #ffffff;
 $white-offset: #fff6f8;
