--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ $primary-dark: #073763;
 $secondary: #9ac6ed;
 $black: #2f2f41;
 $white: #ffffff;
-$white-offset: #fff6f8;
+$white-offset: #f6f8ff;
 $steel: #5c5a5a;
 
 // Links
