--- a/_includes/call.html
+++ b/_includes/call.html
@@ -10,6 +10,9 @@
       </a>
     </div>
     {% endif %}
+    <div class="call-email">
+      <a href="/doc/Brochure.pdf" download="MeldTechEngineering - Brochure">Brochure</a>
+    </div>
   </div>
     {% if include.show_button %}
       <div class="call-box-bottom">
