fixing contact and About Us

--- a/_includes/call.html
+++ b/_includes/call.html
@@ -11,7 +11,7 @@
     </div>
     {% endif %}
     <div class="call-email">
-      <a href="/doc/Brochure.pdf" download="MeldTechEngineering - Brochure">Brochure</a>
+      You can download our Brochure <a href="/doc/Brochure.pdf" download="MeldTechEngineering - Brochure">here</a>
     </div>
   </div>
     {% if include.show_button %}
